--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,7 +1,7 @@
 .hero_container{
-  background-color: #4c5b63;
   position: relative;
   text-align: center;
+  background-color: #4c5b63;
   color: white;
 }
 .hero_details{
@@ -19,6 +19,12 @@
   color: #4c5b63;
 }
 
-.mapIcon{
+.hero_container{
+  text-align: center;
+}
+.heroBanner_form{
+  display: flex;
+  flex-direction: row;
+
 
 }
