--- a/src/layouts/Footer/Footer.module.scss
+++ b/src/layouts/Footer/Footer.module.scss
@@ -6,8 +6,14 @@
   justify-content: space-between;
 }
 
+.footer_title, .footer_links{
+  font-size: 1.3rem;
+}
+
+
 .useful_li{
   list-style: none;
+  margin: 1.2rem;
 }
 
 .form_Section{
@@ -45,5 +51,5 @@ textarea .input{
   color:#4C5B63;
   text-align: center;
   font-size: .8rem;
-
+  padding: 1.1rem;
 }
