--- a/src/layouts/Header/Header.module.scss
+++ b/src/layouts/Header/Header.module.scss
@@ -20,7 +20,9 @@
 
     button {
       background-color: #fff;
-      color:#4C5B63 ;
+      color:#4C5B63;
+      border-radius: .2rem;
+      
     }
   }
 
