--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,30 +1,25 @@
-.hero_container{
-  position: relative;
-  text-align: center;
-  background-color: #4c5b63;
-  color: white;
-}
-.hero_details{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+.hero_container {
+  background: url('../../assets/hero-image.png') no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100vw;
+  height: 70vh;
+  object-fit: cover;
+  .hero_details {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 70vh;
+    color: #fff;
 
-.btn{
-  margin: 2rem;
-  padding: .5rem;
-  border-radius: .5rem;
-  border: none;
-  color: #4c5b63;
-}
+    h1 {
+      margin-bottom: 0.5rem;
+      font-size: 2rem;
+    }
 
-.hero_container{
-  text-align: center;
-}
-.heroBanner_form{
-  display: flex;
-  flex-direction: row;
-
-
+    p {
+      margin-bottom: 2rem;
+    }
+  }
 }
