--- a/src/layouts/Button/Button.module.scss
+++ b/src/layouts/Button/Button.module.scss
@@ -7,9 +7,14 @@ a {
   text-decoration: none;
   padding: 0.6rem 1.2rem;
   border-radius: 0.5rem;
+  font-size: 0.9rem;
 }
 
 .gray {
   color: white;
   background-color: #4c5b63;
+}
+
+.border {
+  border: 2px solid #4c5b63;
 }
