--- a/src/layouts/Footer/Footer.module.scss
+++ b/src/layouts/Footer/Footer.module.scss
@@ -1,55 +1,61 @@
-.footer_section{
-  background-color: #4C5B63;
-  color: #fff;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
+footer {
+  background-color: #4c5b63;
+  padding: 1.5rem 0;
 
-.footer_title, .footer_links{
-  font-size: 1.3rem;
-}
+  .footer_wrapper {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    max-width: 80vw;
+    margin: 0 auto;
 
+    h3,
+    h2,
+    p {
+      color: white;
+      margin-bottom: 1rem;
+    }
 
-.useful_li{
-  list-style: none;
-  margin: 1.2rem;
-}
+    h4 {
+      display: flex;
+      align-items: center;
+      color: white;
+      margin-bottom: 0.5rem;
+      gap: 0.8rem;
+      font-weight: normal;
+      font-size: 0.9rem;
+    }
 
-.form_Section{
-  display: flex;
- flex-direction: column;
-  border-radius: .5rem;
+    .footer_links {
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
 
-}
+        a {
+          font-weight: normal;
+          background-color: transparent;
+          color: white;
+          padding: 0.1rem;
+          border-radius: 0;
+          font-size: 0.9rem;
+        }
+      }
+    }
 
-.form_section form{
-  display: flex;
-  flex-direction: column;
-  margin-top: 1rem;
-}
-
-form .input{
-  padding: .25rem .5rem;
-  font-size: 1.1rem;
-}
-
-textarea .input{
-  height: 20rem;
-}
-
-.submit_btn{
-  padding: .25rem 1rem;
-  background-color: #000;
-  border-radius: .25rem;
-  font-size: 1.1rem;
-  color: white;
-  font-weight: 500;
-}
-.copy_right{
-  background-color: #D9D9D9;
-  color:#4C5B63;
-  text-align: center;
-  font-size: .8rem;
-  padding: 1.1rem;
+    .socials {
+      .icons {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+      }
+    }
+  }
+  .copyright {
+    margin-top: 1rem;
+    text-align: center;
+    color: white;
+    border-top: 1px solid white;
+    padding-top: 0.5rem;
+  }
 }
