--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,5 +1,5 @@
 .hero_container {
-  background: url('../../assets/hero-image.jpg') no-repeat;
+  background: url('../../assets/hero-image.png') no-repeat;
   background-size: cover;
   background-position: center;
   width: 100vw;
