--- a/src/layouts/Header/Header.module.scss
+++ b/src/layouts/Header/Header.module.scss
@@ -4,6 +4,10 @@
   align-items: center;
   padding: 1rem 6rem;
 
+  .header_logo{
+    font-size: 1.5rem;
+    color: #4c5b63;
+  }
   ul {
     display: flex;
     font-size: 1rem;
