--- a/src/layouts/Button/Button.module.scss
+++ b/src/layouts/Button/Button.module.scss
@@ -2,7 +2,6 @@ a {
   border: none;
   font-weight: bold;
   cursor: pointer;
-  background-color: white;
   color: #4c5b63;
   text-decoration: none;
   padding: 0.6rem 1.2rem;
@@ -13,6 +12,11 @@ a {
 .gray {
   color: white;
   background-color: #4c5b63;
+}
+
+.white {
+  color: #4c5b63;
+  background-color: white;
 }
 
 .border {
