more styling on the button

--- a/src/layouts/Button/Button.module.scss
+++ b/src/layouts/Button/Button.module.scss
@@ -22,3 +22,10 @@ a {
 .border {
   border: 2px solid #4c5b63;
 }
+
+.width {
+  padding: 1rem;
+  text-align: center;
+  display: block;
+  width: 100%;
+}
