--- a/src/layouts/Header/Header.module.scss
+++ b/src/layouts/Header/Header.module.scss
@@ -5,6 +5,10 @@
   padding: 1rem 6rem;
   background-color: #f3f6f8;
 
+  a.logo {
+    background-color: transparent;
+  }
+
   ul {
     display: flex;
     gap: 2rem;
@@ -19,6 +23,55 @@
     }
   }
 
+  .profile {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    position: relative;
+    img {
+      width: 3rem;
+      height: 3rem;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .profile_change {
+      position: absolute;
+      width: 15rem;
+      background-color: white;
+      padding: 1rem;
+      border-radius: 0.5rem;
+      top: 4rem;
+      left: -1rem;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
+      z-index: 1;
+
+      p {
+        margin-bottom: 1rem;
+        text-align: center;
+        cursor: pointer;
+      }
+
+      .actions {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        button {
+          border: none;
+          font-weight: bold;
+          cursor: pointer;
+          background-color: white;
+          color: #4c5b63;
+          text-decoration: none;
+          padding: 0.6rem 1.2rem;
+          border-radius: 0.5rem;
+          font-size: 0.9rem;
+        }
+      }
+    }
+  }
+
   .btn {
     display: flex;
     align-items: center;
@@ -28,5 +81,58 @@
       background-color: #fff;
       color: #4c5b63;
     }
+  }
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.55);
+}
+
+.modal {
+  width: 37.5rem;
+  margin: 0 auto;
+  padding: 1rem;
+  border-radius: 0.9rem;
+  position: fixed;
+  top: 30vh;
+  left: 30%;
+  z-index: 100;
+  overflow: hidden;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  label {
+    width: 80%;
+    input {
+      width: 100%;
+      padding: 0.5rem;
+      border: 1px solid #4c5b63;
+      border-radius: 0.5rem;
+      margin-bottom: 1rem;
+      font-size: 0.9rem;
+
+      &:focus {
+        outline: 1px solid #4c5b63;
+      }
+    }
+  }
+  button {
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: #4c5b63;
+    color: white;
+    text-decoration: none;
+    padding: 0.6rem 1.2rem;
+    border-radius: 0.5rem;
+    font-size: 0.9rem;
   }
 }
