--- a/src/pages/Venues/Venues.module.scss
+++ b/src/pages/Venues/Venues.module.scss
@@ -2,6 +2,50 @@
   max-width: 80vw;
   margin: 5rem auto 2rem;
 
+  .heroBanner {
+    max-width: 70vw;
+    margin: 0 auto;
+    padding: 1rem 0.5rem;
+    background-color: #4c5b63;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transform: translateY(-3rem);
+    transition: all 0.3s ease-out;
+    border-radius: 0.5rem;
+
+    .search {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      width: 100%;
+      border-right: 1px solid #fff;
+      padding: 0 0.5rem;
+
+      input {
+        background-color: transparent;
+        padding: 1rem 0.3rem;
+        width: 100%;
+        color: #fff;
+        border: none;
+        border-radius: 0.4rem;
+
+        &:focus {
+          outline: none;
+          border: 0.2px solid #fff;
+        }
+
+        &::placeholder {
+          color: #fff;
+        }
+      }
+    }
+    .search {
+      border-right: 1px solid transparent;
+      padding-left: 0.5rem;
+    }
+  }
+
   h1 {
     text-align: center;
     margin-bottom: 2rem;
