--- a/src/layouts/Header/Header.module.scss
+++ b/src/layouts/Header/Header.module.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 6rem;
- 
+  background-color: #f3f6f8;
 
   a.logo {
     background-color: transparent;
