--- a/src/components/CreateVenue/CreateVenue.module.scss
+++ b/src/components/CreateVenue/CreateVenue.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  color: #4c5b63;
   form {
     display: flex;
     align-items: center;
