--- a/src/components/VenueManagerCard/VenueManagerCard.module.scss
+++ b/src/components/VenueManagerCard/VenueManagerCard.module.scss
@@ -2,6 +2,7 @@
   max-width: 20vw;
   border-radius: 0.5rem;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
+  color: #4c5b63;
   img {
     width: 100%;
     height: 306px;
@@ -42,6 +43,11 @@
         background-color: white;
         color: #4c5b63;
         border: 1px solid #4c5b63;
+      }
+
+      .delete{
+        background-color: darkred;
+        color: #d9d9d9;
       }
 
       .submit {
