--- a/src/pages/VenueManager/VenueManager.module.scss
+++ b/src/pages/VenueManager/VenueManager.module.scss
@@ -22,6 +22,7 @@
           display: flex;
           align-items: center;
           gap: 1rem;
+          color: #4c5b63;
         }
       }
     }
@@ -30,12 +31,12 @@
       h1 {
         text-align: center;
         margin: 2rem 0;
+        color: #4c5b63;
       }
       .my_venues_cards {
         ul {
           display: flex;
           align-items: center;
-          // justify-content: center;
           flex-wrap: wrap;
           gap: 3rem;
         }
