--- a/src/layouts/Header/Header.module.scss
+++ b/src/layouts/Header/Header.module.scss
@@ -28,6 +28,7 @@
     align-items: center;
     gap: 0.5rem;
     position: relative;
+    color: #4c5b63;
     img {
       width: 3rem;
       height: 3rem;
